# medclassx

./: .conda_env.yaml  .gitignore  README.md  pyproject.toml
examples/: make_data_directories.py  toy_mask_brain.py  toy_pca.py
examples/exp_aprinois/: psp-hc-pc.py  psp-hc-pca-regression.py  regression.py
examples/exp_aprinois_2/: compute_pattern.py  compute_pca.py  compute_scores.py  visualize_pca.py
examples/exp_aprinois_3/: 1_preprocess.py  2_pca_regression.py  3_visualize_pca_regression.py  4_compute_pattern.py  5_visualize_scores.py  inference.py
examples/exp_lateNC/: 1_preprocess.py  2_pca_regression.py  3_visualize_pca_regression.py  4_compute_pattern.py  5_visualize_pattern.py  6_visualize_scores.py
medclassx/: binary_pca_regression.py  dataloader.py  dicomloader.py  mask_trafo.py  niftyloader.py  pca.py
test/: test_mask_trafo.py
