[project]
name = "medclassx"
version = "0.0.0"
description = "Medical image analysis with jax."

[project.optional-dependencies]
lint = ["ruff"]
test = ["pytest"]

[tool.ruff]
line-length = 88
src = []

[tool.ruff.lint]
select = ["E501", "I"]
extend-select = [
  "D",   # pydocstyle
]
ignore = ["E731"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88