[project]
name = "medclassx"
version = "0.0.0"
description = "Medical image analysis with jax."

[project.optional-dependencies]
lint = ["ruff"]
test = ["pytest"]

[tool.setuptools]
packages = ["medclassx"]

[tool.ruff]
line-length = 88
src = ["medclassx", "examples", "test"]

[tool.ruff.lint]
select = ["E501", "I001"]
extend-select = ["D"]
ignore = ["E731"] # lambdas can be assigned

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
